--- a/helm/djangowebsite/templates/serviceaccount.yaml
+++ b/helm/djangowebsite/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "My_Portfolio.serviceAccountName" . }}
+  name: {{ include "djangowebsite.serviceAccountName" . }}
   labels:
-    {{- include "My_Portfolio.labels" . | nindent 4 }}
+    {{- include "djangowebsite.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
