--- a/helm/djangowebsite/Chart.yaml
+++ b/helm/djangowebsite/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: My_Portfolio
+name: djangowebsite
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
