--- a/helm/djangowebsite/templates/hpa.yaml
+++ b/helm/djangowebsite/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "My_Portfolio.fullname" . }}
+  name: {{ include "djangowebsite.fullname" . }}
   labels:
-    {{- include "My_Portfolio.labels" . | nindent 4 }}
+    {{- include "djangowebsite.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "My_Portfolio.fullname" . }}
+    name: {{ include "djangowebsite.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
