--- a/helm/djangowebsite/templates/service.yaml
+++ b/helm/djangowebsite/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "My_Portfolio.fullname" . }}
+  name: {{ include "djangowebsite.fullname" . }}
   labels:
-    {{- include "My_Portfolio.labels" . | nindent 4 }}
+    {{- include "djangowebsite.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "My_Portfolio.selectorLabels" . | nindent 4 }}
+    {{- include "djangowebsite.selectorLabels" . | nindent 4 }}
